java base; netty; zookeeper